<resources>
    <string name="app_name">JetValorantSkin</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="required_VP">%d VP</string>
    <string name="total_order">Price Total : %d VP</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="back">Back</string>
    <string name="plus_symbol">＋</string>
    <string name="minus_symbol">-</string>
    <string name="share_message">Hey, I have buy %1$d new skins in VALORANT with total %2$d VP. Do you want too?</string>
    <string name="valorant_reward">Valorant Skin</string>
    <string name="search_skin">Search your favorite skin</string>
    <string name="no_skin_found">No skin found</string>
    <string name="empty_cart">Cart Empty</string>
    <string name="weapon_in_bundle">Weapon In Bundle: %1$s</string>
    <string name="skin_picture">Skin Picture</string>
    <string name="name">Andrico Halim</string>
    <string name="email">andrico.21421007@student.ubl.ac.id</string>
    <string name="my_photo">My Photo</string>
</resources>